--- a/modulo3/desafios/d012/estilo/style.css
+++ b/modulo3/desafios/d012/estilo/style.css
@@ -5,19 +5,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
-    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-padrao: Verdana, Geneva, Tahoma, sans-serif;
     --fonte-destaque: 'Passion One', cursive;
-    --fonte-texto: 'Sriracha', cursive;  
+    --fonte-texto: 'Sriracha', cursive;
 }
 
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte-padrao);
 }
 
 header {
@@ -30,6 +32,8 @@ header > h1 {
     padding-top: 50px;
     /* text-transform: uppercase; força as letras para maiúsculas */
     font-variant: small-caps;
+    font-family: var(--fonte-destaque);
+    font-size: 10vw;
 }
 
 header > p {
@@ -51,6 +55,8 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte-texto);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -61,11 +67,25 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.253);
+    display: inline-block; /* a caixa se adapta ao tamanho do conteúdo */
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#foto001 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#foto002 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
