--- a/modulo4/ex026/mq002/estilos/style.css
+++ b/modulo4/ex026/mq002/estilos/style.css
@@ -1,3 +1,24 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px #1b2db3;
+    padding: 10px;
+}
