--- a/modulo4/ex026/mq004/estilos/media-query.css
+++ b/modulo4/ex026/mq004/estilos/media-query.css
@@ -1,3 +1,57 @@
 @charset "UTF-8";
 
 /* Todas as demais mídias */
+
+/* Typical Device Breakpoints
+-----------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+-----------------------------
+*/
+
+/* IMPRESSÃO */
+@media print {
+
+}
+
+/* TABLETS */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    #phone { display: none; }
+    #tablet { display: block; }
+    #print { display: none; }
+    #desktop { display: none; }
+    #tv { display: none; }
+}
+
+/* DESKTOPS */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    #phone { display: none; }
+    #tablet { display: none; }
+    #print { display: none; }
+    #desktop { display: block; }
+    #tv { display: none; }
+}
+
+/* GRANDES TELAS */
+@media screen and (min-width: 1200px) {
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    #phone { display: none; }
+    #tablet { display: none; }
+    #print { display: none; }
+    #desktop { display: none; }
+    #tv { display: block; }
+}
