--- a/modulo4/desafios/d016/estilos/style.css
+++ b/modulo4/desafios/d016/estilos/style.css
@@ -4,3 +4,45 @@
     --verde: #49a09d;
     --lilas: #5f2c82;
 }
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--lilas);
+    min-height: 100vh;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login {
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden; /* Tudo que estiver fora da borda, fica escondido */
+}
+
+#login > #imagem {
+    background: var(--lilas) url(../imagens/metal.jpg) no-repeat left bottom;
+    background-size: cover;
+    height: 200px;
+}
+
+#login > #formulario {
+    padding: 10px;
+}
